# subgen

./: .gitignore  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml
assets/: icon.icns
config/: asr.toml
scripts/: build_psitedl_bundle.py  build_subgen_bundle.py  deploy_psitedl_bundle.py  deploy_subgen_bundle.py  launch_psitedl.sh  launch_school_scheduler_demo.sh
src/schoolsched_demo/: __init__.py  gui.py  mock_data.py
src/subgen/: cli.py  gui.py
src/subgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/webvidgrab/: __init__.py  cli.py  gui.py  settings.py  site_cli.py  site_gui.py  version.py  youtube_gui.py
tests/: test_schoolsched_demo.py  test_site_cli.py  test_subgen_asr_chunking.py  test_subgen_translation_strategy.py
