[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PSiteDL"
version = "0.1.0"
description = "PSiteDL: webpage segmented video detector and downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.1.1",
  "openai>=1.60.0",
  "tqdm>=4.67.1",
  "tkinterdnd2>=0.4.3"
]

[project.scripts]
subgen = "subgen.cli:main"
subgen-gui = "subgen.gui:main"
webvidgrab = "webvidgrab.cli:main"
webvidgrab-gui = "webvidgrab.gui:main"
webvidgrab-youtube-gui = "webvidgrab.youtube_gui:main"
webvidgrab-site = "webvidgrab.site_cli:main"
webvidgrab-site-gui = "webvidgrab.site_gui:main"
psitedl = "webvidgrab.site_cli:main"
psitedl-gui = "webvidgrab.site_gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
